<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hackathon-Museum</string>
    <string name="action_settings">Settings</string>
    <string name="beacons_in_range_label">Beacons in range label</string>
    <string name="beacons_in_range">Beacons in range:</string>
    <string name="refreshing">Refreshing...</string>
    <string name="first_uuid">First UUID</string>
    <string name="first_major">First Major</string>
    <string name="first_minor">First Minor</string>
    
    <string name="welcome_title">Welcome to the GDG Museum!</string>
    <string name="welcome_explore">Explore the world inside the Museum!</string>
    <string name="welcome_search">Discover for your favorite history!</string>
    <string name="hint">Your questions will be answered when the question is green!</string>
    <string name="searcher">\?</string>
    <string name="found">!</string>

</resources>
