<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:clickable="true"
        android:onClick="changeFakeProximity"
        android:text="@string/welcome_title"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/welcome_explore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_search"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txt_beacons_in_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_beacons_in_range"
        android:layout_alignBottom="@+id/label_beacons_in_range"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/label_beacons_in_range"
        android:contentDescription="Refreshing description"
        android:text="@string/refreshing" />

    <TextView
        android:id="@+id/txt_first_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_first_uuid"
        android:layout_alignBottom="@+id/lbl_first_uuid"
        android:layout_alignLeft="@+id/txt_beacons_in_range"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/refreshing" />

    <TextView
        android:id="@+id/txt_first_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_first_major"
        android:layout_alignBottom="@+id/lbl_first_major"
        android:layout_alignLeft="@+id/txt_first_uuid"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/refreshing" />

    <TextView
        android:id="@+id/txt_first_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_first_minor"
        android:layout_alignBottom="@+id/lbl_first_minor"
        android:layout_alignLeft="@+id/txt_first_major"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/refreshing" />

    <TextView
        android:id="@+id/txt_first_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_first_distance"
        android:layout_alignBottom="@+id/lbl_first_distance"
        android:layout_alignLeft="@+id/txt_first_minor"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/refreshing" />

    <TextView
        android:id="@+id/lbl_first_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_first_minor"
        android:layout_below="@+id/lbl_first_minor"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/first_minor" />

    <TextView
        android:id="@+id/lbl_first_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_first_major"
        android:layout_below="@+id/lbl_first_major"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/first_minor" />

    <TextView
        android:id="@+id/lbl_first_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_first_uuid"
        android:layout_below="@+id/lbl_first_uuid"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/first_major" />

    <TextView
        android:id="@+id/lbl_first_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_beacons_in_range"
        android:layout_below="@+id/txt_beacons_in_range"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/first_uuid" />

    <TextView
        android:id="@+id/label_beacons_in_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textExclamation"
        android:layout_toLeftOf="@+id/textExclamation"
        android:contentDescription="@string/beacons_in_range_label"
        android:text="@string/beacons_in_range" />

    <TextView
        android:id="@+id/textExclamation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0"
        android:text="@string/found"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#336727"
        android:textSize="150dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textExclamation"
        android:layout_alignBottom="@+id/textExclamation"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:text="@string/searcher"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#B90000"
        android:textSize="150dp"
        android:textStyle="bold" />

</RelativeLayout>